Updated by Oct25

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,17 +3,53 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{wang2020analysis,
+  title={Analysis of Traffic Properties of Commuters in a Speed-Limit Corridor with Toll Station under Microscopic Method},
+  abbr={JTE},
+  author={Zhao, Jing and Li, Peng and Zheng, Zhe and Han, Yin},
+  abstract={This study applies the full velocity difference (FVD) model to investigate commuters’ driving process in a speed limit corridor with a toll station and explains how some factors affect the outflow of the traffic corridor system from the microscopic perspective. First, a micromodel system is constructed to depict the commute process in a traffic corridor with a toll station considering the speed limit. Second, a metastable state is defined in the paper for deriving the properties of commute problem conveniently. Finally, numerical tests are conducted to investigate some factors’ effects on traffic properties. This study concludes that many traffic properties will be convergent when the commuter’s number increases, and that the length of the road, the speed limit, and the service time of the toll station have effects on the time headway of the origin at the equilibrium state. The results show how the outflow forms in a speed-limit corridor with a toll station from the microscopic perspective and provide insights for policymaking.},
+  author={Wang, Tao and Tang, Tie-Qiao and Zhang, Jian and Li, Peng},
+  journal={Journal of Transportation Engineering, Part A: Systems},
+  volume={146},
+  number={3},
+  pages={04020004},
+  year={2020},
+  publisher={American Society of Civil Engineers},
+  html={https://ascelibrary.org/doi/abs/10.1061/JTEPBS.0000319},
+  pdf={2020JTE.pdf} 
+}
+
+@article{malenje2019vehicle,
+  title={Vehicle yielding probability estimation model at unsignalized midblock crosswalks in Shanghai, China},
+  author={Malenje, Jairus Odawa and Zhao, Jing and Li, Peng and Han, Yin},
+  journal={PLoS one},
+  abbr={Plos One},
+  abstract={The vehicle-pedestrian encounter at midblock crosswalks in urban centers is inevitable but the challenge to urban transportation planners is in achieving a balance between traffic flow efficiency and pedestrian safety. Vehicles are expected to yield to pedestrians who have a right of way at the midblock unsignalized crosswalks but, failure to yield causes conflicts that at times are fatal. This study investigated the effect of macroscopic factors on the vehicle yielding. Six environmental factors are considered: temporal gap size, number of traffic lanes, number of waiting pedestrians, position of pedestrian (whether on street kerb or median), traffic flow direction and presence (or absence) of monitoring ePolice. Video Data on six observed variables that influenced vehicle yielding was collected from 13 uncontrolled crosswalk locations in Shanghai city in the Peoples Republic of China. A Logit model with a 95.9% accuracy was developed to describe the vehicle yielding behavior. The results showed that gap size and number of traffic lanes had the highest influence on driver yielding decision and that drivers were more likely to yield if ePolice was present. The sensitivity analysis was conducted and appropriate recommendations on improving the pedestrians crossing safety were proposed accordingly.},
+  volume={14},
+  number={3},
+  pages={e0213876},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA},
+  html={https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0213876},
+  pdf={2019-plos.pdf} 
+}
+
 @article{an2019effect,
   title={Effect of lane allocation on operational efficiency at weaving areas based on a cellular automaton model},
   abbr={IET},
   author={An, Xu and Zhao, Jing and Li, Peng and Ma, Xiaodan},
+  abstract={The traffic weaving area is one of the key bottlenecks affecting the operation efficiency of an urban expressway system. The main motivation of this study is to explore the effects of lane allocation on the operational efficiency at weaving areas. A cellular automaton model was established, in which three different lane-changing rules were considered to match the driving behaviour when the lanes are allocated. Using the average vehicular travel time and the average velocity as the indicators, the operational performance of various lane allocation schemes was compared under different traffic and geometric conditions. A case study is used to validate and evaluate the effectiveness of the proposed method. The results show that the benefits of the lane-allocation strategy are affected by the traffic flow, weaving volume ratio, weaving length, and installation location of the isolation facilities. The lane-allocation strategy has promising application under the conditions of a traffic flow that is >400 veh/ln, at weaving volume ratio between 0.2 and 0.7, and weaving length shorter than 300 m. Moreover, the isolation facilities should cover the weaving area when the lane-allocation strategy is used.},
   journal={IET Intelligent Transport Systems},
   volume={13},
   number={5},
   pages={851--859},
   year={2019},
-  publisher={IET}
+  publisher={IET},
+  html={https://digital-library.theiet.org/content/journals/10.1049/iet-its.2018.5143},
+  pdf={2019-IET.pdf}
 }
+
+
 @article{zhao2018analysis,
   title={Analysis of saturation flow rate at tandem intersections using field data},
   abbr={IET},
@@ -32,12 +68,59 @@
 @article{malenje2018extended,
   title={An extended car-following model with the consideration of the illegal pedestrian crossing},
   abbr={Physica A},
+  abstract={Pedestrian illegal crossings at midblock are very unpredictable and pose a potential tragic conflict with vehicles besides generally disrupting the normal flow of traffic. The drivers need to not only anticipate but also respond to their actions accordingly to avoid potential conflicts. The objective of this paper was to describe the behavior of the drivers under illegal pedestrian crossing circumstances by proposing an extended car-following model, and then analyze the impacts of the illegal pedestrian crossing on the normal traffic flow at the midblock. In this study, three conditions have been considered, namely: no pedestrians, pedestrians present but waiting, and pedestrians crossing. The numerical results illustrate that the disruptive nature of the illegal pedestrian crossing could worsen when the number of pedestrian is large, the pedestrian platoon size is small, and the speed limitation is high.},
   author={Malenje, Jairus Odawa and Zhao, Jing and Li, Peng and Han, Yin},
   journal={Physica A: Statistical Mechanics and its Applications},
   volume={508},
   pages={650--661},
   year={2018},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  html={https://www.sciencedirect.com/science/article/pii/S0378437118306204},
+  pdf={2018-Physica.pdf}
+}
+
+@article{zhao2017optimal,
+  title={Optimal design of midblock crosswalk to achieve trade-off between vehicles and pedestrians},
+  author={Zhao, Jing and Ma, Wanjing and Li, Peng},
+  journal={Journal of transportation engineering, Part A: Systems},
+  abbr={JTE},
+  abstract={Midblock crosswalks are installed mainly at locations with heavy pedestrian traffic to increase the accessibility of points along the streets to pedestrians. However, midblock crosswalks may cause additional delays for vehicles. This paper presents an integrated design method for midblock crosswalks that balances the trade-off between the efficiency of vehicle operation and pedestrian crossing by making full use of the vehicular red time at the downstream intersection. The method combines location selection and signal timing in a unified optimization model that is formulated as a multiobjective linear programming problem. The Pareto frontier of the proposed model is obtained by iterating all possible combinations of the weights of the two objectives. For each combination of weights, the optimization problem becomes a single-objective mixed-integer linear programming problem that can be solved with the standard branch-and-bound technique. The results of extensive numerical analyses and case studies demonstrate the effectiveness of the proposed model and indicate its promising application in providing additional crosswalks for pedestrians while only slightly impacting vehicular operations},
+  volume={143},
+  number={1},
+  pages={04016003},
+  year={2017},
+  publisher={American Society of Civil Engineers},
+  html={https://ascelibrary.org/doi/full/10.1061/JTEPBS.0000006},
+  pdf={2017-JTE.pdf}
+}
+
+@article{zhao2017extended,
+  title={An extended car-following model with consideration of vehicle to vehicle communication of two conflicting streams},
+  author={Zhao, Jing and Li, Peng},
+  journal={Physica A: Statistical Mechanics and its Applications},
+  abbr={Physica A},
+  abstract={Inthispaper,weproposeacar-followingmodeltoexploretheinfluencesofV2Vcommu-nicationonthedrivingbehavioratun-signalizedintersectionswithtwocrossingstreamsand to explore how the speed guidance strategy affects the operation efficiency. The nu-merical results illustrate that the benefits of the guidance strategy could be enhanced bylengthening the guiding space range and increasing the maximum speed limitation, andthattheguidancestrategyismoresuitableunderlowtomediumtrafficdensityandsmallsafetyintervalcondition.},
+  volume={473},
+  pages={178--187},
+  year={2017},
+  publisher={Elsevier},
+  html={https://www.sciencedirect.com/science/article/pii/S0378437116310068},
+  pdf={2017-physic.pdf}
+}
+
+@article{zhao2016network,
+  title={A network enhancement model with integrated lane reorganization and traffic control strategies},
+  author={Zhao, Jing and Liu, Yue and Li, Peng},
+  journal={Journal of advanced transportation},
+  abbr={JAT},
+  abstract={},
+  volume={50},
+  number={6},
+  pages={1090--1110},
+  year={2016},
+  publisher={Wiley Online Library},
+  html={https://onlinelibrary.wiley.com/doi/full/10.1002/atr.1391},
+  pdf={2016-jat.pdf}
 }
 
 
@@ -68,10 +151,13 @@ abbr={Physica A},
   title={An extended car-following model with consideration of speed guidance at intersections},
   author={Zhao, Jing and Li, Peng},
   journal={Physica A: Statistical Mechanics and its Applications},
+  abstract={The main motivation of this paper is to analyze the influences of speed guidance strategies on the driving behaviors under four different traffic signalized conditions and to investigate an extended car-following model to explore how the speed guidance affects two different vehicle types that are intelligent vehicles and traditional vehicles during the phase-change periods. The numerical results show that the proposed model can qualitatively describe the impacts of the speed guidance strategies on vehicle’s movement trail including the acceleration strategy, smooth braking strategy, and deceleration strategy. Moreover, the benefits of the speed guidance could be enhanced by lengthening the guiding space range, expanding permitted guiding speed range, and increasing the percentage of the intelligent vehicles.},
   volume={461},
   pages={1--8},
   year={2016},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  html={https://www.sciencedirect.com/science/article/pii/S0378437116302278},
+  pdf={2016-physica.pdf}
 }
 
 
